<resources>
    <string name="quick_zoom_summary">略过100%和“适应屏幕”之间的缩放步骤 (150%, 200%等)。</string>
    <string name="album_art">Album art</string>
    <string name="android_40_compatible_mode">Android 4.0 compatible mode</string>
    <string name="android_40_compatible_mode_summary">Use this mode if you have issues with screen layout.</string>
    <string name="audio">Audio</string>
    <string name="audio_delay">Audio delay</string>
    <string name="audio_delay_summary">Set audio delay time for audio synchronization. It may not be used with HW decoder.</string>
    <string name="audio_fade_in_on_seek">Fade on seek</string>
    <string name="audio_fade_in_on_start">Fade on start</string>
    <string name="audio_focus">Play alone</string>
    <string name="audio_focus_summary">Stop other players while playing back videos or audios. It also makes MX Player stop if other players begin to play or you make a phone call.</string>
    <string name="audio_language">Preferred audio language</string>
    <string name="audio_language_summary">Language of the audio track you want to use. It may not be used with HW decoder.</string>
    <string name="audio_player">Audio player</string>
    <string name="audio_player_summary">Use as audio player.</string>
    <string name="back_to_list">Back to list</string>
    <string name="back_to_list_summary">Return to the list after playback is completed.</string>
    <string name="bluetooth_audio_delay">Bluetooth audio delay</string>
    <string name="bluetooth_audio_delay_summary">Set Bluetooth audio delay time for audio synchronization. It may not be used with HW decoder.</string>
    <string name="button_backlight_off">Turn off button backlight</string>
    <string name="button_backlight_off_summary">Turn off main buttons\' backlight during playback. (If backlight keeps turning on in spite of this option, uncheck this option and reboot device if necessary)</string>
    <string name="calibrate_hw_play_position">Calibrate playback position</string>
    <string name="calibrate_hw_play_position_message">Enter seconds. E.g., 1.6</string>
    <string name="calibrate_hw_play_position_summary">Enter seconds to adjust playback position of HW decoder. This is useful when playback position is displayed incorrectly.</string>
    <string name="cfg_default_deinterlace_summary">Deinterlace by default. Currently deinterlacing works only with SW decoder.</string>
    <string name="cfg_default_swaudio">SW audio</string>
    <string name="cfg_default_swaudio_summary">Use SW audio decoder instead of HW audio decoder.</string>
    <string name="cfg_general">General</string>
    <string name="cfg_list">List</string>
    <string name="cfg_player">Player</string>
    <string name="cfg_tuner_drag">Controls</string>
    <string name="cfg_tuner_drag_summary">Input controls: Touch actions, gestures, lock mode, etc.</string>
    <string name="cfg_tuner_navigation">Navigation</string>
    <string name="cfg_tuner_navigation_summary">Navigation settings: seeking settings, forward/backward buttons, etc.</string>
    <string name="cfg_tuner_screen">Screen</string>
    <string name="cfg_tuner_screen_summary">Screen settings: orientation, full screen, brightness, etc.</string>
    <string name="cfg_zoom_delay">Video resizing delay</string>
    <string name="cfg_zoom_delay_message">Enter delay time in milliseconds:</string>
    <string name="cfg_zoom_delay_summary">Set delay time for resizing videos on hardware decoders. Set higher value if screen flickers severely or freezes while resizing.</string>
    <string name="color_format">Color format</string>
    <string name="color_format_summary">YUV is experimental and does not work on all devices.</string>
    <string name="core_limit">CPU core limit</string>
    <string name="core_limit_summary">Specify the maximum number of CPU cores to be used for SW decoding.</string>
    <string name="correct_hw_aspect_ratio">Correct aspect ratio</string>
    <string name="correct_hw_aspect_ratio_summary">Correct aspect ratio of HW decoded videos. Use this option if HW decoder ignores aspect ratio.</string>
    <string name="custom_codec">Custom codec</string>
    <string name="custom_codec_summary">Use custom ffmpeg build. Please beware that an invalid file may crash app.</string>
    <string name="decoder">Decoder</string>
    <string name="decoder_hardware">Hardware decoder</string>
    <string name="decoder_software">Software decoder</string>
    <string name="default_playback_speed">Default playback speed</string>
    <string name="default_swdecoder_net">SW decoder (network)</string>
    <string name="default_swdecoder_net_summary">Use SW decoder for network play from remote sources via HTTP, FTP, RTSP, MMS and more.</string>
    <string name="display_album_art_on_lock_screen">Display cover art on the lock screen.</string>
    <string name="double_tap_back_key">Double-tap the back button</string>
    <string name="double_tap_back_key_summary">Press the back button twice to close the playback screen.</string>
    <string name="download_custom_codec">Download custom codec</string>
    <string name="fast_seek">Fast seeking</string>
    <string name="fast_seek_summary">Seek to nearest keyframe position instead of exact position. This setting applies to HW+ and SW decoder.</string>
    <string name="headset_show_system_volume_ui">System volume panel</string>
    <string name="headset_show_system_volume_ui_summary">Show system volume panel while changing volume with the headset plugged in.</string>
    <string name="hw_audio_track_selectable">HW audio track selectable</string>
    <string name="hw_audio_track_selectable_summary">Turn it off only if HW decoder crashes immediately after changing audio track or playing videos using an unsupported audio codec. If this option is turned off, custom audio codecs will not be used automatically with HW decoder.</string>
    <string name="interface_">Interface</string>
    <string name="list_theme">Theme</string>
    <string name="loading_circle_animation">Loading circle animation</string>
    <string name="mark_as">Mark as…</string>
    <string name="media_buttons">Media buttons</string>
    <string name="media_buttons_summary">Respond to media control buttons from headset, bluetooth, etc.</string>
    <string name="menu_deinterlace">Deinterlace</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="omx_audio_with_sw_video">HW+ audio on SW video</string>
    <string name="omx_audio_with_sw_video_summary">Use HW+ audio decoder if SW audio decoder fails in SW decoding mode.</string>
    <string name="omx_video_codecs">HW+ video codecs</string>
    <string name="omx_video_codecs_summary">Select video codecs to be used with HW+ decoder.</string>
    <string name="omxdecoder_local">HW+ decoder (local)</string>
    <string name="omxdecoder_local_summary">Set HW+ decoder as the default hardware decoder for local files.</string>
    <string name="omxdecoder_net">HW+ decoder (network)</string>
    <string name="omxdecoder_net_summary">Set HW+ decoder as the default hardware decoder for network play.</string>
    <string name="omxdecoder_use">Use HW+ decoder</string>
    <string name="pause_on_headset_disconnected">Pause on headset disconnected</string>
    <string name="pause_on_headset_disconnected_explain">Pause playback when wired/Bluetooth headset disconnected from the device.</string>
    <string name="playback">Playback</string>
    <string name="prevnext_to_rewff">Next/Prev → FF/Rew</string>
    <string name="prevnext_to_rewff_summary">Treat Next/Prev media buttons as FF/Rew button.</string>
    <string name="quick_zoom">Quick zoom</string>
    <string name="remember_selections">Remember selections</string>
    <string name="remember_selections_summary">Remember selections for each files such as choice of audio track, subtitle track, decoder…</string>
    <string name="resume_last_summary">Select whether to resume from the point where you stopped.</string>
    <string name="resume_only_first">Resume only the first file</string>
    <string name="resume_only_first_explain">Apply resume setting only on the first file. Next files will start from the beginning.</string>
    <string name="screen_lock_mode">Screen lock</string>
    <string name="screen_lock_mode_summary">Try other mode if default screen lock does not work.</string>
    <string name="seek_previews">Preview while seeking</string>
    <string name="seek_previews_net">Preview while seeking (network)</string>
    <string name="seek_previews_net_summary">Display preview image for network play.</string>
    <string name="seek_previews_summary">Display preview image while changing playback position.</string>
    <string name="select_all">Select all</string>
    <string name="smart_prev">Smart previous button</string>
    <string name="smart_prev_summary">If you select \'previous\' button, it will resume again from the beginning or open the previous file depending upon the current playback position.</string>
    <string name="soft_main_keys">Software navigation buttons</string>
    <string name="soft_main_keys_summary">This device has software navigation buttons. (back, home, menu, etc.) Check this option if buttons are not hidden automatically.</string>
    <string name="sticky">Background play</string>
    <string name="sticky_audio">Background play (audio)</string>
    <string name="sticky_audio_summary">Use background play for audio playback.</string>
    <string name="sticky_summary">Audio playback will be continued in the background even after the screen turns off.</string>
    <string name="style">Style</string>
    <string name="subtitle">Subtitle</string>
    <string name="suppress_error_message">Suppress error message</string>
    <string name="suppress_error_message_desc">Skip to next video without displaying error message if video loading fails.</string>
    <string name="swaudio_local">SW audio (local)</string>
    <string name="swaudio_local_summary">Use SW audio decoder for playing for local files stored on the device.</string>
    <string name="swaudio_net">SW audio (network)</string>
    <string name="swaudio_net_summary">Use SW audio decoder for playing remote network sources.</string>
    <string name="swdecoder_local">SW decoder (local)</string>
    <string name="swdecoder_local_summary">Use SW decoder for local files stored on the device.</string>
    <string name="sync_system_volume">System volume</string>
    <string name="sync_system_volume_explain">Synchronize sound volume with the system media volume.</string>
    <string name="toggle_on_media_play_button">Toggle playback with play button</string>
    <string name="toggle_on_media_play_button_summary">Toggle playback in response to \'play\' media button. This option is useful only for devices having trouble with the play button.</string>
    <string name="try_hw_if_omx_fails">Try HW decoder</string>
    <string name="try_hw_if_omx_fails_summary">Try HW decoder if HW+ decoder fails.</string>
    <string name="try_omx_if_hw_fails">Try HW+ decoder</string>
    <string name="try_omx_if_hw_fails_summary">Try HW+ decoder if HW decoder fails.</string>
    <string name="use_speedup_tricks">Use speedup tricks</string>
    <string name="volume_boost">Volume boost</string>
    <string name="volume_boost_summary">Audio volume can be boosted up to 200% if you use HW+ or SW decoder.</string>
    <string name="zoom_limited">Limit video resizing</string>
    <string name="zoom_limited_summary">Do not increase video size if it exceeds its display size. (HW decoder only)</string>
    <string name="default_playback_theme">black_blueAccent</string>
    <string name="package_name">com.mxtech.videoplayer.pro</string>
    <string name="resume_last">@string/resume</string>
</resources>